[package]
name = "assume"
version = "0.2.0"
authors = ["Nicholas Gorski"]
license = "MIT OR Apache-2.0"

description = "Macro for stating unsafe assumptions in Rust."
readme = "README.md"
documentation = "https://docs.rs/assume"

repository = "https://github.com/NicholasGorski/assume"
keywords = ["macro", "assume", "assert"]
categories = ["rust-patterns", "no-std"]
